--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -12,10 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
           ref: trunk
+      - run: |
+          BRANCH_NAME="${{ github.workflow }}-${{ github.run_number }}"
+          git checkout -b $BRANCH_NAME
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -25,6 +30,7 @@ jobs:
         run: npm install
 
       - name: Version bump
+        id: version-bump
         run: |
           if [ ${{ github.event.inputs.theme-slug }} == 'all' ]; then
             npm run deploy:version-bump
@@ -52,3 +58,34 @@ jobs:
 
             npm run deploy:version-bump -- ${{ github.event.inputs.theme-slug }}
           fi
+          
+      - name: Check if there are changes
+        id: check-changes
+        run: |
+          if [[ $(git status --porcelain) ]]; then
+            echo "HAS_CHANGES=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_CHANGES=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit changes
+        if: steps.check-changes.outputs.HAS_CHANGES == 'true'
+        run: |
+            git config user.name 'github-actions[bot]'
+            git config user.email 'github-actions[bot]@users.noreply.github.com'
+            git add .
+            git commit -m "Version bump & changelog update" --no-verify
+            git push --set-upstream origin ${{ steps.checkout.outputs.BRANCH_NAME }}
+
+      - name: Create Pull Request
+        if: steps.check-changes.outputs.HAS_CHANGES == 'true'
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: 'Version bump'
+          title: 'Version bump'
+          body: 'Version bump'
+          branch: ${{ steps.checkout.outputs.BRANCH_NAME }}
+          base: trunk
+          labels: automate
+          draft: false
