fix branch name

--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create branch
         id: create-branch
         run: |
-          BRANCH_NAME="${{ github.workflow }}-${{ github.run_number }}"
+          BRANCH_NAME="automated-version-bump/${{ github.run_number }}"
           git checkout -b $BRANCH_NAME
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
