--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -80,14 +80,11 @@ jobs:
             git push --set-upstream origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
 
       - name: Create Pull Request
-        if: steps.check-changes.outputs.HAS_CHANGES == 'true'
-        uses: peter-evans/create-pull-request@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'Version bump'
-          title: 'Version bump'
-          body: 'Version bump'
-          branch: ${{ steps.create-branch.outputs.BRANCH_NAME }}
-          base: trunk
-          labels: automate
-          draft: false
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            gh pr create \
+            --title "[Automation] Version bump" \
+            --base trunk \
+            --head ${{ steps.create-branch.outputs.BRANCH_NAME }} \
+            --body "vesion bump pr"
