--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -13,6 +13,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: trunk
+      
+      - name: Create branch
+        id: create-branch
+        run: |
+          BRANCH_NAME="automated-version-bump/${{ github.run_number }}"
+          git checkout -b $BRANCH_NAME
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_OUTPUT
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
@@ -22,9 +32,10 @@ jobs:
         run: npm install
 
       - name: Version bump
+        id: version-bump
         run: |
           if [ ${{ github.event.inputs.theme-slug }} == 'all' ]; then
-            npm run version-bump
+            npm run deploy:version-bump
           else
             # Check if theme exists
             theme_exists=false
@@ -47,5 +58,33 @@ jobs:
               exit 1
             fi
 
-            npm run version-bump -- ${{ github.event.inputs.theme-slug }}
+            npm run deploy:version-bump -- ${{ github.event.inputs.theme-slug }}
           fi
+
+      - name: Check if there are changes
+        id: check-changes
+        run: |
+          if [[ $(git status --porcelain) ]]; then
+            echo "HAS_CHANGES=true" >> $GITHUB_OUTPUT
+          else
+            echo "HAS_CHANGES=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Commit changes
+        if: steps.check-changes.outputs.HAS_CHANGES == 'true'
+        run: |
+            git config user.name 'github-actions[bot]'
+            git config user.email 'github-actions[bot]@users.noreply.github.com'
+            git add .
+            git commit -m "Version bump & changelog update" --no-verify
+            git push --set-upstream origin ${{ steps.create-branch.outputs.BRANCH_NAME }}
+
+      - name: Create Pull Request
+        env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+            gh pr create \
+            --title "[Automation] Version bump" \
+            --base trunk \
+            --head ${{ steps.create-branch.outputs.BRANCH_NAME }} \
+            --body "vesion bump pr"
